# automata

./: .gitignore  CMakeLists.txt
automata/: main.cpp
automata/include/: automata.hpp  cell.hpp  colours.hpp  engine.hpp  grid.hpp  tools.hpp  types.hpp  window.hpp
automata/src/: automata.cpp  cell.cpp  colours.cpp  engine.cpp  grid.cpp  tile.cpp  tools.cpp  window.cpp
